--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
   			<artifactId>joda-time</artifactId>
   			<!--   <version>2.10</version> -->
 		</dependency>
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>29.0-jre</version>
+		</dependency>
 	</dependencies>
 	<repositories>
         <repository>
