ignore intellij files

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
-.metadata
 
 # eclipse specific
 *.pydevproject
@@ -28,3 +27,7 @@ local.properties
 .loadpath
 /target/
 app.log*
+
+# intellij
+.idea
+*.iml
